--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.0.3",
+    "gsap": "^3.12.7",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
